--- a/acneclear.css
+++ b/acneclear.css
@@ -35,7 +35,7 @@
 }
 
 .me{
-  font-size: 25px;  
+  font-size: 27px;  
   width: 85%; 
 }
 
@@ -455,10 +455,11 @@ div :id {
     font-weight: 700;
     font-style: italic;
     font-size: 27px;
+    margin-bottom: 50px;
 }
 
   .che {
-    width: 70%; 
+    width: 78%; 
     font-family: "Anton SC", sans-serif;
     font-weight: 600;
     font-style: italic;
