--- a/acneclear.css
+++ b/acneclear.css
@@ -236,7 +236,7 @@ div :id {
 .custom-font {
   margin-left: -30px; 
   margin-right: -33px;
-  margin-top: 20px;
+  margin-top: 20px; 
   font-size: 50px;
   margin-bottom: 30px;
   font-family: "PT Serif", serif;
@@ -249,8 +249,8 @@ div :id {
 .me{
     margin-left: -28px;
     margin-right: -25px;
-    margin-top: 0px; 
-    font-size: 40px; 
+    margin-top: 4px; 
+    font-size: 30px; 
     display: inline-block; 
     width: 80%; 
     font-family: "Baskervville SC", serif;
@@ -372,7 +372,7 @@ div :id {
 .top {
   margin-left: 15px;
    margin-top: 70px; 
-   margin-bottom: 40px;
+   margin-bottom: 30px;
     color: #491a00; 
     font-size: 30px;
 }
@@ -451,11 +451,13 @@ div :id {
     }
 
   .md {
-    font-family: "Wittgenstein", serif;
+    font-size: 30px; 
+    color: #461700; 
+    font-family: Rubik, serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     font-weight: 700;
-    font-style: italic;
-    font-size: 30px;
-    margin-bottom: 40px;
+    width: 95%;
 }
 
   .che {
